test/visibility/use-no-qualified/noUnderscoreOnlyList.good
noUnderscoreOnlyList.chpl:5: error: syntax error near '_'
